Added a quantity check. Moved hardcoded strings to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,18 @@
     <string name="sell">SELL</string>
     <string name="home_banner">Inventory Snapshot</string>
     <string name="menu_delete">Delete Product</string>
+    <string name="outOfStock_warning">Sorry! This item is currently Out of Stock!\nPlace a replenishment order</string>
+    <string name="toast_emptyProductName">Product Name.Can\'t be blank.</string>
+    <string name="toast_emptyPrice">Price.Can\'t be blank.</string>
+    <string name="toast_emptyQuantity">Quantity.Can\'t be blank.</string>
+    <string name="toast_emptySupplier">Supplier Name.Can\'t be blank.</string>
+    <string name="toast_emptyImage">Image.Can\'t be blank.</string>
+    <string name="toast_emptySales">Sales figure.Can\'t be blank.</string>
+    <string name="delete_entry_title">Delete Entry</string>
+    <string name="delete_message">Are you sure you want to delete this entry?</string>
+    <string name="receive_shipment_msg">Enter Quantity Received</string>
+    <string name="toast_numberFormatException">Please enter numeric value for price, quantity and sales</string>
+
 
 
 </resources>
